gitops/mgmt/kube-prometheus-stack/48.3.3/kustomize/base/generated/kube-prometheus-stack/templates/prometheus/ingress.yaml
---
# Source: kube-prometheus-stack/templates/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: mgmt-monitoring
  labels:
    app: kube-prometheus-stack-prometheus
    
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/version: "48.3.3"
    app.kubernetes.io/part-of: kube-prometheus-stack
    chart: kube-prometheus-stack-48.3.3
    release: "kube-prometheus-stack"
    heritage: "Helm"
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.mgmt.cloud.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
